tests/fixtures/effect-compiler/errors/EFX2400.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  #if COND
    #extension GL_OES_STANDARD_DERIVATIVE
  #endif
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
